--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.kyrobbins</groupId>
     <artifactId>common-utils</artifactId>
-    <version>1.4.0</version>
+    <version>1.5.0</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -15,6 +15,7 @@
 
         <lombok.version>1.18.30</lombok.version>
         <jakarta.version>3.0.0</jakarta.version>
+        <guava.version>33.5.0-jre</guava.version>
         <mockito.version>5.11.0</mockito.version>
 
         <slf4j.version>2.0.13</slf4j.version>
@@ -39,6 +40,11 @@
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j.version}</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
         </dependency>
 
         <dependency>
